Add tests, admin, Template with Modifications
Added views for index page, detail view of questions, Voting view for voting and result view for showing views. Test cases are added for Questions, and Choice models.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 Python		
-bin		
+bin
+lib		
 myapp		
 test.py	
 lib	
 pmd.txt
 .DS_Store
 .idea	
+.Python
+.idea/
+lib/
+myapp/
+pyvenv.cfg
+test.py
